# game_engine_ini

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Day4 总结 — README.md  Day5 渲染与功能迭代.md  README.md
docs/models/: model.gltf
export/: scene.mtl
shaders/: fs_mesh.sc  fs_pbr_mr.sc  fs_simple.sc  fs_tex.sc  varying.def.sc  vs_mesh.sc  vs_pbr.sc  vs_simple.sc  vs_tex.sc
src/: main.cpp
src/core/: App.cpp  App.h  FrameTimer.cpp  FrameTimer.h
src/gfx/: Camera.h  GltfLoader.cpp  GltfLoader.h  Material.h  Renderer.cpp  Renderer.h  ResourceCache.cpp  ResourceCache.h  TextureLoader.cpp  shader_utils.cpp  shader_utils.h
src/gfx/camera/: Camera.h
src/gfx/culling/: Frustum.cpp  Frustum.h
src/gfx/lighting/: Lighting.h
src/gfx/material/: PbrMaterial.cpp  PbrMaterial.h
src/gfx/memory/: ScopeExit.h
src/gfx/pipeline/: ClearPass.cpp  ClearPass.h  ForwardPBR.cpp  ForwardPBR.h  ForwardPBRPass.cpp  ForwardPBRPass.h  RenderPass.h
src/gfx/resource/: ResourceCache.cpp
src/gfx/texture/: TextureLoader.h
src/io/: Exporter.cpp  Exporter.h
src/io/gltf/: GltfLoader.cpp
src/scene/: CameraController.cpp  CameraController.h  Input.cpp  Input.h  OrbitController.cpp  OrbitController.h  Scene.cpp  Scene.h
